# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakeLists_stop.txt  README.md
include/glad/: glad.h
include/headers/: buffer.h  data.h  func.h  shader.h  texture.h
lib/pkgconfig/: glfw3.pc
src/: glad.c  main.cpp
src/funcs/: data.cpp  func.cpp  shader.cpp  texture.cpp
